# FriendlyFace

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  litefs.yml  pyproject.toml  railway.toml  render.yaml  vercel.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  lint.yml  publish-sdk.yml
docs/: ACTIVATION_REPORT.html  API_REFERENCE.md  ARCHITECTURE.md  DATA_MODELS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  PAPER_DRAFT.md  PATENT_DRAFT.md  PROJECT_OVERVIEW.md  RESEARCH_LINEAGE.md  ROADMAP.md  RUNBOOK.md  SECURITY_AND_CRYPTOGRAPHY.md  paper.tex
friendlyface/: __init__.py  __main__.py  auth.py  config.py  exceptions.py  logging_config.py  rbac.py
friendlyface/api/: app.py  sse.py
friendlyface/auth_providers/: __init__.py  api_key.py  base.py  factory.py  jwt_provider.py  user_account.py
friendlyface/billing/: gate.py  routes.py  stripe_client.py
friendlyface/core/: merkle.py  models.py  provenance.py  service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: 001_initial.sql  002_audit_log.sql  002_audit_log_down.sql  003_subject_keys_erasure.sql  003_subject_keys_erasure_down.sql  004_retention_policies.sql  004_retention_policies_down.sql  005_did_keys.sql  005_did_keys_down.sql  006_merkle_checkpoints.sql  006_merkle_checkpoints_down.sql  007_face_gallery.sql  007_face_gallery_down.sql  008_explanation_records.sql  008_explanation_records_down.sql  009_model_registry.sql  009_model_registry_down.sql  010_fl_simulations.sql  010_fl_simulations_down.sql  011_compliance_cache.sql  011_compliance_cache_down.sql  012_inference_artifacts.sql  012_inference_artifacts_down.sql  013_recognition_results.sql  013_recognition_results_down.sql  014_user_accounts.sql  014_user_accounts_down.sql  015_subscriptions.sql  015_subscriptions_down.sql  016_user_api_keys.sql  016_user_api_keys_down.sql  017_seals.sql  017_seals_down.sql  018_anchors.sql  018_anchors_down.sql
models/: MODEL_REGISTRY.json
scripts/: download_model.py  download_onnx_model.py  full_pipeline_demo.py  seed_demo.py  seed_scenarios.py
sdk/: Makefile  README.md  pyproject.toml
sdk/friendlyface_sdk/: __init__.py  client.py  decorators.py  models.py  session.py
sdk/tests/: conftest.py  test_client.py  test_decorators.py  test_session.py
tasks/: prd-forensicseal.json  prd-forensicseal.md  prd-tab-improvements.md  prd.json
tests/: conftest.py  test_anchor.py  test_api.py  test_api_versioning.py  test_auth.py  test_auth_integration.py  test_auth_providers.py  test_backup.py  test_bundle_artifacts.py  test_bundle_crypto.py  test_bundle_export.py  test_cache_persistence.py  test_calibration.py  test_compliance.py  test_conformity.py  test_consent_api.py  test_coverage_gaps.py  test_detection.py  test_did.py  test_did_persistence.py  test_dp.py  test_e2e_phase9.py  test_e2e_pipeline.py  test_ed25519_did.py  test_ed25519_vc.py  test_embeddings.py  test_encryption_at_rest.py  test_erasure.py  test_error_edges.py  test_explainability.py  test_explainability_api.py  test_fairness.py  test_fairness_api.py  test_fl.py  test_fl_api.py  test_fl_gating.py  test_fusion.py  test_gallery.py  test_gallery_api.py  test_governance.py  (+37 more)
(+92 files in other folders)
