[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "friendlyface-sdk"
version = "0.1.0"
description = "Python SDK for the FriendlyFace forensic-friendly AI platform"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
target-version = "py39"
line-length = 100
