[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "friendlyface-sdk"
version = "0.1.0"
description = "Python SDK for the FriendlyFace forensic-friendly AI platform — verifiable AI compliance in 5 lines of code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dico Angelo", email = "dicoangelo@blackamethystcapitalkeyhold.onmicrosoft.com"},
]
keywords = ["ai", "compliance", "forensic", "eu-ai-act", "verifiable-credentials", "facial-recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/Dicoangelo/FriendlyFace"
Documentation = "https://friendlyface.metaventionsai.com"
Repository = "https://github.com/Dicoangelo/FriendlyFace"
Issues = "https://github.com/Dicoangelo/FriendlyFace/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
target-version = "py39"
line-length = 100
